# Zen

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
core/: CMakeLists.txt
core/demos/: CMakeLists.txt
core/demos/src/: main.cpp
core/examples/: CMakeLists.txt
core/examples/src/: main.cpp
core/include/zen/core/: handle_pool.hpp  i_module.hpp  module.hpp  timer.hpp
core/src/: timer.cpp
demos/: CMakeLists.txt
modules/: CMakeLists.txt
modules/input/include/zen/input/: input.hpp  mouse.hpp
platform/: CMakeLists.txt
platform/demos/: CMakeLists.txt
platform/demos/src/: main.cpp
platform/examples/: CMakeLists.txt
platform/examples/src/: main.cpp
platform/include/zen/platform/: common.hpp  event.hpp  i_backend.hpp  i_input.hpp  i_window.hpp  input.hpp  platform.hpp  window.hpp
platform/src/: common.cpp  i_backend.hpp  i_window_backend.hpp  platform.cpp
platform/src/internal/: sdl2_backend.cpp  sdl2_backend.hpp
